@@ -4,3 +4,5 @@
 -added settings to HitboxESP
 -removed ExpEsp
 -added BoxESP
+-smartoffhand fix when you have 1 totem left
+-smartooffhand gapple setting
